# scwm

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  run.sh  window_manager.cpp  window_manager.hpp  xinitrc
